# italic

./: README.md  pyproject.toml
italic/: __init__.py  __main__.py  api.py  app.py
italic/screens/: dashboard_screen.py  dashboard_screen.py.save  login_screen.py  notebook_screen.py
italic/widgets/: editor.py
